# D3D12GLTFViewer

./: .gitignore  CMakeLists.txt  font.h  font_chicago.cpp  font_ibmplexmono.cpp  guifont.cpp  guifont.h  guifont_chicago.cpp  guifont_ibmplexmono.cpp  guistyle.cpp  guistyle.h  main.cpp
lib/: CMakeLists.txt
lib/inc/: mrdr.h  mrdr_math.h
lib/inc/mrdr/: Renderer.h  common.h
lib/src/: Renderer.cpp  main.cpp  tinygltf.cpp
lib/src/Renderer/: CommandManager.cpp  CommandManager.h  CommandPool.cpp  CommandPool.h  CommandQueue.cpp  CommandQueue.h  ShaderDescriptorHeap.cpp  ShaderDescriptorHeap.h  StaticDescriptors.h  SwapChain.cpp  SwapChain.h
lib/src/mrdr/: context.cpp  context.h
lib/src/mrdr/dx12/: camera.cpp  camera.h  command_fence.cpp  command_fence.h  command_pool.cpp  command_pool.h  command_queue.cpp  command_queue.h  common.h  context.cpp  context.h  descriptor_span.h  device.cpp  device.h  gpu_descriptor_heap.cpp  gpu_descriptor_heap.h  renderer.cpp  renderer.h  scene.cpp  scene.h  swap_chain.cpp  swap_chain.h
minirdr/: CMakeLists.txt
minirdr/inc/minirdr/: Renderer.h  common.h
minirdr/src/: Renderer.cpp
minirdr/src/Renderer/: CommandManager.cpp  CommandManager.h  CommandPool.cpp  CommandPool.h  CommandQueue.cpp  CommandQueue.h  ShaderDescriptorHeap.cpp  ShaderDescriptorHeap.h  SwapChain.cpp  SwapChain.h
